# Kwartiwi-Display-firmware

./: .gitignore  README.md  partitions.csv
main/: CMakeLists.txt  buzzer.c  data_manager.c  idf_component.yml  main.c  networking.c  tsc2046.c  ui.c  ui_task.c  web_client.c
main/include/: buzzer.h  data_manager.h  networking.h  tsc2046.h  ui.h  ui_task.h  web_client.h
main/ui/: loading_screen.c  main_screen.c  setup_screen.c  tp_cal_screen.c  ui.c
main/ui/fonts/: roboto_bold_20.c  roboto_bold_70.c
main/ui/img/: connected_symbol_14_14.c  connected_symbol_nc_14_14.c  kwartiwi_logo.c  reload_symbol_blue_20_20.c  server_symbol_orange_50_50.c  settings_symbol_20_20.c  tp_cal_cross_img.c  wifi_symbol_20_14.c  wifi_symbol_nc_20_14.c  wifi_symbol_orange_50_50.c
main/ui/include/: loading_screen.h  main_screen.h  setup_screen.h  tp_cal_screen.h  ui.h
