idf_component_register(
        SRCS
            "main.c"
            "networking.c"
            "buzzer.c"
            "ui_task.c"
            "tsc2046.c"
            "ui/ui.c"
            "ui/tp_cal_screen.c"
            "ui/img/tp_cal_cross_img.c"
            "web_client.c"
            "data_manager.c"
            "ui/img/kwartiwi_logo.c"
            "ui/loading_screen.c"
            "ui/main_screen.c"
            "ui/fonts/roboto_bold_70.c"
            "ui/fonts/roboto_bold_20.c"
            "ui/img/settings_symbol_20_20.c"
            "ui/img/wifi_symbol_20_14.c"
            "ui/img/wifi_symbol_nc_20_14.c"
            "ui/img/connected_symbol_14_14.c"
            "ui/img/connected_symbol_nc_14_14.c"
            "ui/img/wifi_symbol_orange_50_50.c"
            "ui/img/server_symbol_orange_50_50.c"
            "ui/img/reload_symbol_blue_20_20.c"
            "ui/setup_screen.c"
        INCLUDE_DIRS
            "."
            "include"
            "ui/include"
)